--- a/src/main/webapp/VAADIN/themes/mytheme/styles.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.scss
@@ -14,6 +14,14 @@
     	width: 130px;
 	}
 	
+	.customer-table-filter-datetime input[type="text"] { 	
+    	height: 30px;
+    /* margin-bottom: 2px; */
+    	width: 130px;
+    	position: relative;
+    	top: 2px;
+	}
+	
 	.customers-comment-view {
 		padding: 10px !important;
 		
