some constants split for possible further multilanguage implementation

--- a/src/main/webapp/VAADIN/themes/mytheme/styles.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.scss
@@ -32,9 +32,14 @@
 	
 	.customers-table-layout {
 		padding: 0 !important;
-		width: 780px !important;
+		width: 790px !important;
 	}
 	.customer-ui-label {
 		font-size: 20px;
+	}
+	
+	.customer-comment-text {
+		padding-left: 10px;
+	
 	}
 }
